appId: com.nextup
---
- launchApp
- tapOn: "Search"
- assertVisible: "Search Shows"
- tapOn: 
    id: "search-input"
- inputText: "Breaking Bad"
- assertVisible: "Breaking Bad"
